TEST_PROGRAMS/VALID/02/vardeclmul.go

package main

func main(){
    var x,x1 int;
    var y1, y2 = 43, 45
    var z, z2 int = 5,7

}
