TEST_PROGRAMS/INVALID/09/blank_field.go
package blank_field

func main() {
    _ = x._
}
